syntax = "proto3";

message FlowyError {
    int32 code = 1;
    string msg = 2;
}
